--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.5.2",
     "vue-gesture": "^2.0.0",
     "vue-gestures": "0.0.2",
+    "vue-googlemaps": "^0.1.1",
     "vue-preload": "^0.1.11",
     "vue-router": "^3.0.1",
     "vue-touch": "^2.0.0-beta.4",
