--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "vue": "^2.5.2",
     "vue-authenticate": "^1.3.4",
     "vue-axios": "^2.1.2",
+    "vue-facebook-signin-button": "^1.0.1",
     "vue-gesture": "^2.0.0",
     "vue-gestures": "0.0.2",
+    "vue-google-signin-button": "^1.0.2",
     "vue-googlemaps": "^0.1.1",
     "vue-preload": "^0.1.11",
     "vue-router": "^3.0.1",
