--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "facebook-login-vuejs": "^2.1.3",
+    "npm": "^6.3.0",
     "vue": "^2.5.2",
     "vue-authenticate": "^1.3.4",
     "vue-axios": "^2.1.2",
